--- a/backEnd/.env.example
+++ b/backEnd/.env.example
@@ -4,8 +4,8 @@ PORT=3001
 # Configuración de la base de datos PostgreSQL
 DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=password
+DB_USERNAME=tu_usuario_postgres
+DB_PASSWORD=tu_password_aqui
 DB_NAME=products_db
 
 # Configuración del entorno
