--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -6,9 +6,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "test-db": "ts-node src/test-connection.ts",
-    "typeorm": "typeorm-ts-node-commonjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
   "author": "",
